Updated website layout and fixed history tables from getting cut off

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
   #dashboard {
     flex-direction: row;
     width: calc(100vw - 16px) !important;
+    height: auto !important;
     min-height: 0px !important;
     padding: 15px 0 15px 10px !important;
   }
@@ -23,7 +24,10 @@
     height: 100% !important;
   }
   #buy-sell-forms>div {
-    max-width: 66% !important;
+    width: 100% !important;
+  }
+  .form-wrapper {
+    width: 66% !important;
   }
 }
 header {
@@ -78,13 +82,12 @@ input, select {
 
 /* dashboard */
 
-#dashboard {
-  display: flex;
-  flex-direction: column;
-  min-height: calc(100vh - 4rem);
-  height: 100%;
+#overview {
   padding: 16px 16px 0 16px;
-  background-color: rgb(0, 0, 0, .05);
+  text-align: center;
+}
+#overview>div {
+  margin: auto;
 }
 #welcome-text {
   margin: 0;
@@ -102,7 +105,7 @@ input, select {
   background-color: rgb(0, 0, 0, .1);
 }
 .navbar-button {
-  padding: 8px;
+  padding: 16px;
   font-size: 1rem;
   font-weight: 600;
   color: #d15ccd;
@@ -114,6 +117,10 @@ input, select {
 .navbar-button:hover {
   background-color: rgb(0, 0, 0, .15)
 }
+#dashboard {
+  height: calc(100vh - 4rem);
+  background-color: rgb(0, 0, 0, .05);
+}
 
 /* components */
 
@@ -122,21 +129,30 @@ input, select {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 33%;
+  height: 33%;
   padding: 0 0 16px 0;
-  margin: 32px 0 0 0;
+  margin: auto;
+  margin-top: 64px;
   border-top: solid rgb(71,210,192) 16px;
   background-color: rgb(0, 0, 0, .0250);
   border-radius: 1rem;
   box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
 #buy-sell-forms {
-  display: flex;
-  justify-content: center;
   width: 100%;
   height: calc(100vh - 4rem);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
-#buy-sell-forms>div {
-  max-width: 33%;
-  max-height: 33%;
+#positions-table {
+  text-align: center;
+}
+#positions-table>table {
+  margin: auto;
+}
+#history-tables {
+  text-align: center;
+}
+#history-tables>table {
+  margin: auto;
 }
